# intern-rotation-system

./: .gitignore  BUILD_LINUX.md  PROJECT.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js
.github/workflows/: build.yml  win7-legacy-build.yml
docs/: 01-architecture.md  02-database.md  03-backend.md  04-rotation-algorithm.md  05-frontend.md  06-frontend-pages.md  07-business-modules.md  08-build-and-deployment.md  09-security.md  CHANGELOG.md  README.md  WIN7-LEGACY.md  实习生轮转管理系统-需求文档.md
docs/backend/: dao-map.md  services-map.md
docs/frontend/: api-reference.md  hooks-reference.md
docs/reference/: glossary.md  status-enums.md  (+1 more)
electron-workspace/: README.md  main.js  package.json  preload.js
scripts/: create-source-icon.mjs  fix-desktop-icon.ps1  generate-icon.mjs  generate-icons.mjs
src/: App.tsx  _fix_temp.py  index.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/nsis-hooks/: installer-custom.nsh
src-tauri/src/: error.rs  lib.rs  main.rs  store.rs
src-tauri/src/commands/: archive_commands.rs  department_commands.rs  devtools_command.rs  intern_commands.rs  mod.rs  report_commands.rs  rotation_commands.rs  settings_commands.rs
src-tauri/src/database/: mod.rs  schema.rs
src-tauri/src/database/dao/: departments.rs  interns.rs  logs.rs  mod.rs  rotation.rs  settings.rs
src-tauri/src/services/: archive_service.rs  department_service.rs  intern_service.rs  log_service.rs  mod.rs  rotation_service.rs  settings_service.rs
(+38 files in other folders)
