[package]
name = "intern-rotation-system"
version = "1.0.0"
description = "实习生管理系统"
authors = ["you"]
edition = "2021"

[lib]
name = "intern_rotation_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
bcrypt = "0.15"
tokio = { version = "1", features = ["full"] }
printpdf = "0.4"
rusttype = "0.9"

# 精简 release 体积(原 defaults 已很厚)
#   lto = "fat"           → 跨 crate 内联 + 死代码消除,稳健优化
#   codegen-units = 1     → 整 crate 单个 codegen unit 拿到更激进的优化
#   strip = "symbols"     → 脱符号(生产版本不再带 debug symbols)
#   opt-level = "s"       → 体积优先(略损失运行时性能,可接受)
#   panic = "abort"       → 减小 panic 展开表
[profile.release]
lto = "fat"
codegen-units = 1
strip = "symbols"
opt-level = "s"
panic = "abort"

# 开发版保留快速迭代
[profile.dev]
opt-level = 0
debug = true
